@@ -4,6 +4,9 @@ This file keeps a record of important changes to the project.
 This project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
 ## [Unreleased] - <>
+### Changed
+- Loading a new image will now work properly and replace the old image on the
+screen.
 
 ## [v0.9.0] - 2020-05-25
 ### Added
